# adhoc-pdb

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  script_to_debug.py  setup.cfg
adhoc_pdb/: __init__.py  adhoc-pdb-auto-install.pth  adhoc_pdb.py  cli.py  utils.py
tests/: conftest.py  test_adhoc_pdb.py  test_auto_install.py  test_cli.py  test_utils.py
