[tool.poetry]
name = "adhoc-pdb"
version = "0.1.1"
description = "A simple tool that allows you to debug your system whenever you want, with no overhead, even in production!"
authors = ["Yehonatan Zecharia <yonti95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yehonatanz/adhoc-pdb"
homepage = "https://github.com/yehonatanz/adhoc-pdb"
keywords = ["debug", "pdb", "production"]

[tool.poetry.dependencies]
python = "^3.5 || ~2.7"
remote-pdb = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
mypy = "^0.761.0"
flake8 = "^3.7"
flake8-isort = "^2.8"
flake8-black = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
