[tool.poetry]
name = "adhoc-pdb"
version = "0.1.1"
description = "A simple tool that allows you to debug your system whenever you want, with no overhead, even in production!"
authors = ["Yehonatan Zecharia <yonti95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yehonatanz/adhoc-pdb"
homepage = "https://github.com/yehonatanz/adhoc-pdb"
keywords = ["debug", "pdb", "production"]

[tool.poetry.dependencies]
python = "^3.5 || ~2.7"
remote-pdb = "^2.0"
typing = {version = "*", python = "<3"}
click = {version = "^7.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^19.1b0", python = "^3.6"}
isort = "^4.3"
flake8 = "^3.7"
flake8-isort = "^2.8"
flake8-black = {version = "^0.1.1", python = "^3.6"}
mypy = {version = "^0.761.0", python = "^3.6"}

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.scripts]
adhoc-pdb = "adhoc_pdb.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
